language-plutus-core/test/type-errors/instType.plc
(program 0.1.0
  { (con 64 ! 0) [(con integer) (con 64)] }
)
